--- a/Frontend/my-app/src/Components/Doctor/Login/Doctor.css
+++ b/Frontend/my-app/src/Components/Doctor/Login/Doctor.css
@@ -1,7 +1,7 @@
 /* To be included before every new file */
-.Radio-Login-hor{
+.Doctor-Login-hor{
     display: flex;
-    background-color: rgb(14, 14, 98);
+    background-color: rgb(7, 110, 101);
 }
   
   
@@ -14,25 +14,27 @@
   
   
 .pageTitle {
-    color: white;
+    color: rgb(252, 252, 252);
     margin-left: 255px;
     margin-top: 35px;
 }
 
 /* ------------------------------------------------------ */
 
-.Radio-Login-Ver{
+
+
+.Doctor-Login-Ver{
     display: flex;
     background-color: #ffff00;
     height: 580px;
 }
   
-.Radio-Login-Ver-Left{
+.Doctor-Login-Ver-Left{
     width: 60%;
     background-color: white;
     padding-top: 2%;
 }
-.Radio-Login-Ver-Right{
+.Doctor-Login-Ver-Right{
     width: 40%;
     background-color: white;
     display: flex;
@@ -91,9 +93,9 @@
     border-radius: 4px;
 }
   
-#login {
+#login_doc {
     color:white;
-    background-color: rgb(14, 14, 98);
+    background-color: rgb(7, 110, 101);
     padding: 10px;
     border: none;
     border-radius: 4px;
@@ -104,7 +106,7 @@
 }
   
 #login:hover {
-    background-color: #0056b3;
+    background-color: rgb(7, 110, 101);
 }
 #radiomainimg{
     padding-left: 10%;
@@ -128,9 +130,9 @@
     padding-left: 35px;
 }
 
-.ForgotPassword{
+.ForgotPasswordDoc{
     float: right;
     font-size: 12px;
-    color: #0f4d8f;
+    color: rgb(7, 110, 101);
     cursor: pointer;
 }
