--- a/Frontend/my-app/src/Components/Admin/Admin.css
+++ b/Frontend/my-app/src/Components/Admin/Admin.css
@@ -1,8 +1,9 @@
 /* To be included before every new file */
-.Patient-Login-hor{
+.Admin-Login-hor{
     display: flex;
-    background-color: rgb(21, 136, 194);
+    background-color: rgb(82,209, 188);
 }
+  
 .divisions1
 {
     display: flex;
@@ -10,8 +11,7 @@
     align-items: center; /* Center vertically */
     padding-left: 10%;
 } 
-  
-#radseideimg{
+#adminseideimg{
     padding-top: 1%;
     padding-left: 10%;
     height: 120px;
@@ -20,27 +20,25 @@
   
   
 .pageTitle {
-    color: rgb(252, 252, 252);
-    margin-left: 200px;
+    color: white;
+    margin-left: 255px;
     margin-top: 35px;
 }
 
 /* ------------------------------------------------------ */
 
-
-
-.Patient-Login-Ver{
+.Admin-Login-Ver{
     display: flex;
     background-color: #ffff00;
     height: 580px;
 }
   
-.Patient-Login-Ver-Left{
+.Admin-Login-Ver-Left{
     width: 60%;
     background-color: white;
     padding-top: 2%;
 }
-.Patient-Login-Ver-Right{
+.Admin-Login-Ver-Right{
     width: 40%;
     background-color: white;
     display: flex;
@@ -99,9 +97,9 @@
     border-radius: 4px;
 }
   
-#login_patient {
+#login_admin {
     color:white;
-    background-color: rgb(16, 151, 230);
+    background-color: rgb(82,209, 188);
     padding: 10px;
     border: none;
     border-radius: 4px;
@@ -109,28 +107,26 @@
     font-size: 16px;
     width: 100%;
     margin-top: 10px;
-    transition: background-color 0.3s ease;
-}
-
-#login_patient:hover{
-    background-color: rgb(37, 65, 149);
 }
   
-
-#radiomainimg{
+#login_admin:hover {
+    background-color:rgb(9, 88, 75);
+}
+#adminmainimg{
     padding-left: 10%;
     height: 550px;
-    width:100%
+    width: 100%;
 }
 
 .input-icon {
     position: absolute;
     transform: translateX(-40%);
     transform: translateY(30%);
-    left: 10px; /* Adjust this value as needed */
-    width: 20px; /* Adjust this value as needed */
+    left: 10px; 
+    width: 20px; 
     height:20px;
 }
+
 #faeye{
     position: absolute;
     transform: translateX(-50%);
@@ -147,9 +143,9 @@
     padding-left: 35px;
 }
 
-.ForgotPasswordDoc{
+.AdminForgotPassword{
     float: right;
     font-size: 12px;
-    color: rgb(16, 151, 230);
+    color: rgb(82,209, 188);
     cursor: pointer;
 }
