--- a/Frontend/my-app/src/Components/Lab/Login/Lab.css
+++ b/Frontend/my-app/src/Components/Lab/Login/Lab.css
@@ -2,7 +2,13 @@
     display: flex;
     background-color: rgb(244, 165, 46);
 }
-  
+.divisions1
+{
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+    padding-left: 10%;
+}  
   
 #labseideimg{
     padding-top: 1%;
