--- a/Frontend/my-app/src/Components/Patient/Registration/RegPatient.css
+++ b/Frontend/my-app/src/Components/Patient/Registration/RegPatient.css
@@ -3,7 +3,13 @@
     display: flex;
     background-color: rgb(21, 136, 194);
 }
-  
+.divisions1
+{
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+    padding-left: 10%;
+}  
   
 #radseideimg{
     padding-top: 1%;
