--- a/Frontend/my-app/src/Components/Patient/PatientLanding/PatientLanding.css
+++ b/Frontend/my-app/src/Components/Patient/PatientLanding/PatientLanding.css
@@ -3,7 +3,7 @@
 .Doctor-Login-hor{
     display: flex;
     min-width: 1200px;
-    background-color: rgb(7, 110, 101);
+    background-color: #1588C1;
 }
 
 
@@ -34,7 +34,7 @@
     width: 100vh;
     border-radius:50px;
     border-width: 3px;
-    border-color: rgb(7, 110, 101);
+    border-color: #1588C1;
     margin-left: 150px;
     margin-top: 20px;
 
@@ -57,7 +57,7 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: rgb(7, 110, 101);
+    background-color: #1588C1;
     padding: 10px;
     text-align: center;
     color: white;
