Changed the footer css

--- a/Frontend/my-app/src/Components/Radiologist/Profile/Profile.css
+++ b/Frontend/my-app/src/Components/Radiologist/Profile/Profile.css
@@ -45,8 +45,9 @@ body {
 
 .pageTitle {
   color: white;
-  margin-left: 255px;
+  margin-left: 200px;
   margin-top: 35px;
+  transform: translateX(-100px);
 }
 
 .image-container {
@@ -78,21 +79,21 @@ body {
 .profile-details input[type="text"],
 .profile-details input[type="email"],
 .profile-details input[type="password"] {
-  width: 250px; /* Adjust width as needed */
+  width: 250px; 
   padding: 10px;
-  border: 2px solid rgb(20, 129, 197); /* Blue color */
-  border-radius: 10px; /* Rounded edges */
-  box-sizing: border-box; /* Include padding in width */
+  border: 2px solid rgb(20, 129, 197); 
+  border-radius: 10px; 
+  box-sizing: border-box; 
 }
 
 .profile-details input[type="text"]::placeholder,
 .profile-details input[type="email"]::placeholder,
 .profile-details input[type="password"]::placeholder {
-  color: rgba(3, 43, 69, 0.811); /* Blue color */
+  color: rgba(3, 43, 69, 0.811); 
 }
 
 .left-sidebar {
-  margin-top: 20px; /* Adjust margin as needed */
+  margin-top: 20px; 
 }
 
 .user-icon {
@@ -127,9 +128,11 @@ body {
   background-color: rgb(20, 129, 197);
   color: #ffffff;
   padding: 20px;
-  height:100%;
   text-align: center;
-  transform: translateY(285%);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
 
   
