--- a/Frontend/my-app/src/Components/FirstPage.css
+++ b/Frontend/my-app/src/Components/FirstPage.css
@@ -1,44 +1,39 @@
-body, html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-}
-  
 .container {
     display: flex;
-    height: 100%;
-    
+    position:relative;
+    overflow-x: hidden;
+    overflow-y: hidden;
+   min-height: 100vh;
 }
 
-.left {
-    flex: 1;
-    background-color:#023166 ;
+.leftsidebar {
+    flex: 0.4;
+    width: 80px;
+    min-height: 100%;
+    background:#023166 ;
     display: flex;
     flex-direction: column;
-    align-items: center;
     padding: 20px;
     margin-right: 5px;
-    justify-content: center;
-    min-height: 100vh;
-    width: 350px;
+   
+    
 }
 
 
 .right {
-    flex: 3;
+    flex: 2;
     display: flex;
-   flex-direction: column;
+    flex-direction: column;
 }
 
-/* .content {
-    text-align: center;
-    padding: 20px;
-    color: white;
-  } */
+
 .top{
+    display: flex;
+    flex-direction: row;
     background-color: #83C3E0;
     max-height: 120px;
-    text-align: center;
+    align-items: center;
+    justify-content: center;
     padding: 10px;
     min-width: 155vh;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -51,40 +46,43 @@ body, html {
     box-shadow: 0 -6px 10px 10px rgba(1, 5, 43, 0.5);
 }
 
-.top header h1 {
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-}
-.blue{
+
+.top header h1 .blue{
     color: white;
 }
 .bottom{
-   
+    display: flex;
+    flex-direction: row;
     background-color: white;
 }
 .logo img {
-    max-width: 150px;
+    max-width: 100px;
+    height: 90px;
     margin-bottom: 30px;
     
 }
 .logo{
-    transform: translateY(-10%);
+    align-self: center; 
+    margin-top: 20px  ;
+    margin-bottom: 20px;
 }  
 .icon-button {
-    margin: 12px;
-    padding: 30px;
-    width: 250px;
-    height:10px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: #023166;
-    font-size: large;
-    background-color: white;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-radius: 10px;
+   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: small;
+    padding: 10px;
+    height:20px;
+    border-bottom: 2px solid rgba(0,0,0,0.05);
+    border-top: 2px solid rgba(225,225,225,0.05);
+    color: white;
+    display: block;
 }
-
+.icon-button:hover{
+    background: #a1b6d4;
+    
+}
+.icon-button .fas{
+  width: 25px;
+}
 .icon-button i:first-child {
     margin-right: auto;
 }
