--- a/Frontend/my-app/src/Components/FirstPage.css
+++ b/Frontend/my-app/src/Components/FirstPage.css
@@ -18,43 +18,71 @@
    
     
 }
-
-
 .right {
     flex: 2;
     display: flex;
     flex-direction: column;
 }
-
-
-.top{
-    display: flex;
-    flex-direction: row;
-    background-color: #83C3E0;
-    max-height: 120px;
-    align-items: center;
-    justify-content: center;
-    padding: 10px;
-    min-width: 155vh;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-style: italic;
-    font-size: 20px;
-    color: #023166;
-    position: sticky;
-    z-index: 999;
-    top: -10px;
-    box-shadow: 0 -6px 10px 10px rgba(1, 5, 43, 0.5);
-}
-
-
-.top header h1 .blue{
-    color: white;
-}
 .bottom{
     display: flex;
     flex-direction: row;
-    background-color: white;
+    background-image: url("../Resources/firstpage3.jpeg");
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: blur(10px); 
+    z-index: -1; 
+    
+   
 }
+.bg-text {
+    
+    background-color: rgb(0,0,0); /* Fallback color*/
+    background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+    color: white;
+    font-weight: bold;
+    font-style: italic;
+    border: 3px solid #f1f1f1;
+    border-top-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-30%, -50%);
+    z-index: 2;
+    width: 50%;
+    padding: 20px;
+    text-align: center;
+} 
+.bg-text h1{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+    font-weight: 300px;
+}
+.bg-text p{
+    font-weight: 50px;
+}
+blockquote {
+    border: none;
+    font-family: Georgia, "Times New Roman", Times, serif;
+    margin-bottom: -30px;
+}
+
+blockquote p::before {
+    content: "\“";
+    padding: 20px;
+    font-size: 40px;
+    color: #889c0b;
+    align-items:start; 
+}
+blockquote p::after {
+    content: "\”";
+    font-size: 40px;
+    padding: 20px;
+    color: #889c0b;
+    margin-left: 210px;
+} 
 .logo img {
     max-width: 100px;
     height: 90px;
@@ -74,7 +102,10 @@
     border-bottom: 2px solid rgba(0,0,0,0.05);
     border-top: 2px solid rgba(225,225,225,0.05);
     color: white;
-    display: block;
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer;
+   
 }
 .icon-button:hover{
     background: #a1b6d4;
@@ -83,33 +114,20 @@
 .icon-button .fas{
   width: 25px;
 }
-.icon-button i:first-child {
-    margin-right: auto;
-}
-  
+
 .icon-button i:last-child {
     margin-left: auto;
 }
   
-
-.imageleft
+.left-bottom
 {
-    width: 50%; 
-    float:left;
-} 
-#WelcomeImage
-{
-    transform: translateY(20%);
-    max-width: 100%;
-    height: 400px; 
+    
+    display:flex;
+    position:absolute;
+    
+    font-size: small;
+    bottom: 4px;
+    color: white;
+    /* width:100px;
+    word-wrap: break-word; */
 }
-.imageright
-{
-    width: 50%; 
-    float:right;
-}
-#Image
-{
-   transform: translateY(10%);
-   float:right;
-} 
