--- a/Frontend/my-app/src/Components/Radiologist/Profile/Profile.css
+++ b/Frontend/my-app/src/Components/Radiologist/Profile/Profile.css
@@ -60,7 +60,7 @@ body {
   }
   
   .profile-image {
-    width: 700px; 
+    width: 950px; 
     height: 400px; 
     display: block; 
     margin: 20px; 
@@ -79,7 +79,7 @@ body {
 .profile-details input[type="text"],
 .profile-details input[type="email"],
 .profile-details input[type="password"] {
-  width: 250px; 
+  width: 350px; 
   padding: 10px;
   border: 2px solid rgb(20, 129, 197); 
   border-radius: 10px; 
@@ -99,7 +99,7 @@ body {
 .user-icon {
   width: 150px;
   height: 150px;
-  transform: translate(95%, -30%);
+  transform: translate(25%, -30%);
 }
 
 
@@ -111,7 +111,7 @@ body {
   padding: 10px 20px; 
   cursor: pointer;
   width: 200px;
-  transform: translate(calc(50% + 50px), calc(-50% - 30px));
+  transform: translate(calc(50% - 50px), calc(-50% - 30px));
 }
 
 .star-icon {
@@ -122,7 +122,7 @@ body {
 
 .rating-container {
   margin-top: -95px; 
-  transform: translate(168px,165%);
+  transform: translate(5%,165%);
 }
 
 .footer1 {
