--- a/Frontend/my-app/src/Components/Admin/landing/AdminHomePage.css
+++ b/Frontend/my-app/src/Components/Admin/landing/AdminHomePage.css
@@ -167,3 +167,16 @@
     transform: translate(120px, 40px); 
     background-color: green; 
 }
+
+.AdminLogout{
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+    
+}
+
+.input-icon1
+{
+   margin-left: 250px;
+   margin-top: 20px;
+}
