--- a/Frontend/my-app/src/Components/Lab/Landing/LabLanding.css
+++ b/Frontend/my-app/src/Components/Lab/Landing/LabLanding.css
@@ -1,6 +1,6 @@
 
 /* To be included before every new file */
-.Doctor-Login-hor{
+.Lab-Login-hor{
     display: flex;
     min-width: 1200px;
     background-color: rgb(230, 157, 31);
@@ -52,7 +52,7 @@
 }
 
 
- .Docfooter {
+ .Labfooter {
     position: fixed;
     left: 0;
     bottom: 0;
