--- a/Frontend/my-app/src/Components/Radiologist/Landing/RadiologistLanding.css
+++ b/Frontend/my-app/src/Components/Radiologist/Landing/RadiologistLanding.css
@@ -14,10 +14,6 @@
     height: 120px;
     width: 120px;
 }
-  
-  
-
-
 /* ------------------------------------------------------ */
 
 .Search{
@@ -50,8 +46,28 @@
    margin-left: 250px;
    margin-top: 20px;
 }
+.Admin-Home-ver {
+    display: flex;
+    flex-direction: row;
+    background-color: white;
+    height: 100%;
+    margin-bottom:50px;
+}
+.Admin-Home-ver1 {
+    width: 400px;
+    flex:1;
+    height: 85%;
+    background:#0B5C83 ;
+    margin-top: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
 
-
+.Admin-Home-ver2 {
+   flex:2;
+ 
+}
  .Radiofooter {
     position: fixed;
     left: 0;
@@ -61,5 +77,10 @@
     padding: 10px;
     text-align: center;
     color: white;
+  }
+
+  .card{
+    margin-bottom: 40px;
+    margin-top: 10px;
   }
   
