--- a/Frontend/my-app/src/Components/Radiologist/Details/RadiologistDetails.css
+++ b/Frontend/my-app/src/Components/Radiologist/Details/RadiologistDetails.css
@@ -78,7 +78,7 @@
     display: flex;
     flex-direction: row;
     background-color: white;
-    height: 100%;
+    height: 80%;
     margin-bottom: 40px;
 }
 
@@ -110,7 +110,7 @@
     width: 1500px;
     height: 85%;
     margin-top: 30px;
-    margin-left: 150px;
+    margin-left: 8%;
     margin-right: 10px;
     margin-bottom: 30px;
     margin-right: 30px;
@@ -194,11 +194,11 @@
 }
 
 .scan,.pres, .radioReport, .finalDiag{
-    width:500px;
-    height: 250px;
+    width:85%;
+    height: 85%;
     justify-content: center;
-    margin-left: 15%;
-    margin-top: 2%;
+    margin: 5%;
+    /* margin-top: 2%; */
     border: 3px solid black;
     
 }
@@ -212,4 +212,5 @@
     font-size: large;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-align: center;
+    transform: translateY(-20px);
 }
