--- a/Frontend/my-app/src/Components/Radiologist/Details/RadiologistDetails.css
+++ b/Frontend/my-app/src/Components/Radiologist/Details/RadiologistDetails.css
@@ -1,6 +1,6 @@
 .Had-land-container{
     display: flex;
-    min-width: 12000px;
+    width: 100%;
     /* background-color: rgb(230, 157, 31); */
     min-height: 600px;
     flex-direction: column
@@ -12,7 +12,7 @@
 .Admin-Home-hor{
     display: flex;
     background-color: rgb(34, 206, 209);
-    min-width: 12000px;
+    width: 100%;
     height: 130px;
 }
 
@@ -22,12 +22,7 @@
 }
   
   
-#radseideimg{
-    padding-top: 1%;
-    padding-left: 10%;
-    height: 120px;
-    width: 120px;
-}
+
   
   
 .pageTitle {
@@ -62,7 +57,7 @@
     display: flex;
     flex-direction: row;
     background-color: white;
-    height: 585px;
+    height: 100%;
     margin-bottom: 50px;
 }
 
@@ -77,27 +72,31 @@
 .Admin-Home-ver1 {
     
    
-    width: 400px;
-    height: 85%;
-    background:#0B5C83 ;
-    margin-top: 30px;
+    width: 50px;
+    background: black ;
+    /* margin-top: 30px;
     margin-left: 30px;
     margin-right: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 30px; */
     
    
    
 }
+.Favourite{
+    background-color: gray;
+    width: 100%;
+    padding-left: 10px;
+}
 
 .Admin-Home-ver2 {
     background-color: white;
-    width: 1500px;
+    
     height: 85%;
-    margin-top: 30px;
+    /* margin-top: 30px;
     margin-left: 10px;
     margin-right: 30px;
     margin-bottom: 30px;
-    margin-right: 30px;
+    margin-right: 30px; */
     display: flex;
     flex-direction: row;
 }
@@ -111,7 +110,7 @@
 }
 
 .Admin-Home-ver2-1{
-   
+    margin-top: 10%;
     width:500px;
     height: 225px;
     margin-left: 50px;
@@ -128,7 +127,7 @@
     background-color: yellow;
 }
 .Admin-Home-ver2-3{
-    
+    margin-top: 10%;
     width:500px;
     height: 225px;
     margin-left: 50px;
@@ -154,10 +153,9 @@
 
 .VerUp,.VerDown{
     display: flex;
-    flex-direction: row; 
+    flex-direction: column; 
     height: 450px;
     margin-left: 50px;
-    flex-direction: column;
     width: 500px;
 
 }
@@ -169,8 +167,8 @@
 }
 
 .admindoc,.adminrad,.adminpat,.adminlab{
-    width:500px;
-    height: 190px; 
+    width:100%;
+    height: 100%; 
     
 }
 
@@ -180,6 +178,7 @@
     text-align: center;
     align-items: center;
     margin-top: 90px;
+
 }
 
 .AdPat{
