--- a/Frontend/my-app/src/Components/Doctor/Details/DoctorDetails.css
+++ b/Frontend/my-app/src/Components/Doctor/Details/DoctorDetails.css
@@ -13,7 +13,7 @@
 
 .Doc-Home-hor{
     display: flex;
-    background-color: #0E0E62;
+    background-color: #076E65;
     /* width: 100%; */
     height: 18%;
     width: 100%;
@@ -22,24 +22,25 @@
 .admin-land-icon{
     padding-top: 35% ;
     padding-left: 15%;
-    height: 150px;
-    width: 120px;
+    height: 50%;
+    width: 50%;
     margin-left: 15%;
     margin-top: 5%;
     padding-left: 12%;
-    margin-bottom: 25%;
+    margin-bottom: 15%;
 }
   
   
 .Doc-Det-ver1 p{
     
     font-size: larger;
-    background-color: antiquewhite;
+    background-color: #076E65;
     justify-self: center;
     margin: 5%;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: bold;
     text-align: center;
+    color: white;
 
 
 }
@@ -57,11 +58,11 @@
     position: fixed;
     left: 0;
     bottom: 0;
-   width: 100vw;
-    background-color: #0E0E62;
+     width: 100vw;
+    background-color: #076E65;
     padding: 10px;
     text-align: center;
-    color: white;
+    
     margin-top: 20px;
 }
 
@@ -71,7 +72,8 @@
     display: flex;
     justify-content: center; /* Center horizontally */
     align-items: center;
-    margin-left:75%;    
+    margin-left:70%;
+    margin-bottom: 2%;    
 }
 
 .Doc-Det-ver {
@@ -95,12 +97,13 @@
    
     width: 400px;
     height: 85%;
-    background: #0E0E62 ;
+    background: white ;
     margin-top: 30px;
     margin-left: 30px;
     margin-right: 3px;
     margin-bottom: 30px;
-    height: 80%;
+    height: 85%;
+    border-radius: 25px;
    
    
 }
@@ -108,7 +111,7 @@
 .Doc-Det-ver2 {
     background-color: white;
     width: 1500px;
-    height: 85%;
+    height: 90%;
     margin-top: 30px;
     margin-left: 5%;
     margin-right: 10px;
@@ -120,12 +123,27 @@
 .Doc-Det-ver2-inner{
     padding: 30px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     height: 100%;
     background-color: #fcf6f6;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
   z-index: 1;
   transform: translateY(-50px);
+  border-radius: 25px;
+
+}
+
+.Doc-Det-ver2-inner-upper{
+    display: flex;
+    flex-direction: row;
+    height: 90%;
+    width: 100%;
+}
+
+.Doc-Det-ver2-inner-lower{
+    height: 10%;
+    flex-direction: row;
+    align-items: center;
 }
 
 
@@ -140,34 +158,39 @@
    
     width:100%;
     height: 50%;
+    border-radius: 25px;
+
     
 }
 .Doc-Det-ver2-2{
     
     width:100%;
     height: 50%;
+    border-radius: 25px;
+
    
 }
 .Doc-Det-ver2-3{
     
     width:100%;
     height: 50%;
-    
-    top:0;
+    border-radius: 25px;
+
     
 }
 .Doc-Det-ver2-4{
     
     width:100%;
     height: 50%;
-    
+    border-radius: 25px;
+
    
 }
 
 
 
 
-.scan:hover, 
+.scanned:hover, 
 .pres:hover, 
 .radioReport:hover, 
 .finalDiag:hover {
@@ -187,19 +210,37 @@
 .DocVerDown{
    
     flex: 1;
+    
 }
 .DocVerUp{
     
     flex: 1;
 }
 
-.scan,.pres, .radioReport, .finalDiag{
+.scanned,.pres, .radioReport, .finalDiag{
     width:85%;
     height: 85%;
     justify-content: center;
     margin: 5%;
     /* margin-top: 2%; */
-    border: 3px solid black;
+    border-color: #fcf6f6;
+    border-radius: 25px;
+
+    
+}
+
+
+
+.generate-button{
+    width: 30%;
+    align-items: centre;
+    margin-left: 35%;
+    transform: translateY(35px);
+    border-radius: 25px;
+    background-color: #076E65;
+    color: white;
+    font-weight: bold;
+    box-shadow: inset;
     
 }
 
