--- a/Frontend/my-app/src/Components/Radiologist/Landing/RadiologistLanding.css
+++ b/Frontend/my-app/src/Components/Radiologist/Landing/RadiologistLanding.css
@@ -10,7 +10,8 @@
   
 #docsideimg{
     padding-top: 1%;
-    padding-left: 10%;
+    padding-left: 1%;
+    margin-left: 10px;
     height: 120px;
     width: 120px;
 }
@@ -48,15 +49,15 @@
     display: flex;
     flex-direction: row;
     background-color: white;
-    margin-bottom:20px;
+    margin-bottom:15px;
 }
 .Radio-Land-ver1 {
     width: 100px;
     flex:0.4;
     height: 100vh;
     background:#0E0F62 ;
-    margin-top: 30px;
-    margin-left: 30px;
+    margin-top: 10px;
+    margin-left: 6px;
     margin-right: 30px;
     margin-bottom: 2px;
     display: flex;
@@ -64,19 +65,40 @@
 }
 
 .Radio-Land-ver2 {
-   margin-top: 30px;
+   margin-top: 10px;
    flex:2;
    height: 100vh;
    overflow-y: scroll;
-   
 }
+
+/* custom scrollbar */
+::-webkit-scrollbar {
+    width: 20px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
+  }
  .card{
     margin-bottom: 10px;
     margin-top: 10px;
     text-align: center;
     box-shadow: inset 0 0 0 2px #0E0F62;
   }
- 
+ .card:hover{
+  background-color: beige;
+ }
   .radio-landing-about-us-section { 
     padding: 20px;
     background-color: #0E0F62;
@@ -86,4 +108,6 @@
     font-weight: bold;
   }
 
- 
+  .LinkStyle {
+    text-decoration: none;
+  }
