--- a/Frontend/my-app/src/Components/Radiologist/Landing/RadiologistLanding.css
+++ b/Frontend/my-app/src/Components/Radiologist/Landing/RadiologistLanding.css
@@ -3,24 +3,20 @@
 .Radio-landing-hor{
     display: flex;
     background-color: rgb(14, 14, 98);
-    
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px;
+    overflow-x: hidden;
+    width:100%;
 }
 
-
-  
 #docsideimg{
     padding-top: 1%;
     padding-left: 1%;
     margin-left: 10px;
     height: 120px;
     width: 120px;
-}
-/* ------------------------------------------------------ */
-
-.Search{
-    display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
 }
 
 .RadioSearch
@@ -30,21 +26,17 @@
     border-radius:50px;
     border-width: 3px;
     border-color: rgb(242, 247, 246);
-    margin-left: 150px;
     margin-top: 20px;
-    padding: 12px;
+    
 }
-.RadioLogout{
-    display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
-    right: 0;
-}
+
 .input-icon1
 {
    margin-left: 250px;
    margin-top: 20px;
 }
+
+/* ------------------------------------------------------ */
 .Radio-Land-ver {
     display: flex;
     flex-direction: row;
@@ -96,9 +88,7 @@
     text-align: center;
     box-shadow: inset 0 0 0 2px #0E0F62;
   }
- .card:hover{
-  background-color: beige;
- }
+ 
   .radio-landing-about-us-section { 
     padding: 20px;
     background-color: #0E0F62;
